refactor: streamline enemy-kill loop and replace UI kill button with terminal command
This commit:
- Refactors the enemy-kill loop in KillCommand to reduce nested conditions and multiple  statements.
- Removes the debug 'Kill Enemy' button from the player stats UI.
- Adds a new  for the terminal, supporting:
  -  to kill the player (triggering death screen).
  -  to kill all active NPC enemies.
- Introduces a JUnit 5 test suite for KillCommand using Mockito to validate both player and enemy kill paths, as well as invalid selectors.

Signed-off-by: Keys <70819367+keys-i@users.noreply.github.com>