@@ -1,10 +1,10 @@
 package com.csse3200.game.ui.terminal;
 
-import com.csse3200.game.components.Component;
-import com.csse3200.game.ui.terminal.commands.*;
 import com.csse3200.game.GdxGame;
+import com.csse3200.game.components.Component;
 import com.csse3200.game.ui.terminal.autocomplete.BKTree;
 import com.csse3200.game.ui.terminal.autocomplete.RadixTrie;
+import com.csse3200.game.ui.terminal.commands.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -13,59 +13,64 @@ import java.util.*;
 public class Terminal extends Component {
     private static final Logger logger = LoggerFactory.getLogger(Terminal.class);
 
+    // --- Autocomplete tuning ---
+    private static final int   SUGGESTION_LIMIT = 5;
+    private static final int   FUZZY_DISTANCE   = 1;
+    private static final long  DEBOUNCE_NS      = 20_000_000L; // ~20ms
+
     private final Map<String, Command> commands;
+
     private String enteredMessage = "";
     private boolean isOpen = false;
 
-    // --- Autocomplete state ---
-    private final RadixTrie trie = new RadixTrie();
-    private final BKTree bkTree = new BKTree();
+    // Autocomplete state
+    // Recreated on full rebuild for a true "clear and reindex".
+    private RadixTrie trie = new RadixTrie();
+    private BKTree    bkTree = new BKTree();
     private volatile boolean indexDirty = false;
 
-    // debounce ~20ms
-    private static final long DEBOUNCE_NS = 20_000_000L;
     private long lastKeystrokeNs = 0L;
-
-    // cache last suggestions for the current prefix
     private String lastPrefix = "";
     private List<String> lastSuggestions = Collections.emptyList();
 
-    public Terminal() { this(new HashMap<>(), null); }
-    public Terminal(GdxGame game) { this(new HashMap<>(), game); }
+    public Terminal() { this(new LinkedHashMap<>(), null); }
+    public Terminal(GdxGame game) { this(new LinkedHashMap<>(), game); }
     public Terminal(Map<String, Command> commands) { this(commands, null); }
 
     public Terminal(Map<String, Command> commands, GdxGame game) {
-        this.commands = commands;
+        this.commands = Objects.requireNonNullElseGet(commands, LinkedHashMap::new);
 
+        // Register commands (alphabetical for discoverability)
         addCommand("damageMultiplier", new DamageMultiplierCommand());
-        addCommand("deathscreen", new EndScreenCommand(game, GdxGame.ScreenType.DEATH_SCREEN));
-        addCommand("debug", new DebugCommand());
-        addCommand("disableDamage", new DisableDamageCommand());
-        addCommand("doorOverride", new DoorOverrideCommand());
-        addCommand("infiniteDash", new InfiniteDashCommand());
-        addCommand("infiniteJumps", new InfiniteJumpsCommand());
-        addCommand("infiniteStamina", new InfiniteStaminaCommand());
-        addCommand("pickupAll", new PickupAllCommand());
-        addCommand("waves", new WavesCommand());
-        addCommand("winscreen", new EndScreenCommand(game, GdxGame.ScreenType.WIN_SCREEN));
-        // addCommand("teleport", new TeleportCommand());
+        addCommand("deathscreen",      new EndScreenCommand(game, GdxGame.ScreenType.DEATH_SCREEN));
+        addCommand("debug",            new DebugCommand());
+        addCommand("disableDamage",    new DisableDamageCommand());
+        addCommand("doorOverride",     new DoorOverrideCommand());
+        addCommand("infiniteDash",     new InfiniteDashCommand());
+        addCommand("infiniteJumps",    new InfiniteJumpsCommand());
+        addCommand("infiniteStamina",  new InfiniteStaminaCommand());
+        addCommand("kill",             new KillCommand());
+        addCommand("pickupAll",        new PickupAllCommand());
+        addCommand("waves",            new WavesCommand());
+        addCommand("winscreen",        new EndScreenCommand(game, GdxGame.ScreenType.WIN_SCREEN));
+        // addCommand("teleport",      new TeleportCommand());
 
-        // Initial index build
         rebuildAutocompleteIndex();
     }
 
     // --- Public getters ---
-    public String getEnteredMessage() { return enteredMessage; }
-    public boolean isOpen() { return isOpen; }
+    public String  getEnteredMessage() { return enteredMessage; }
+    public boolean isOpen()            { return isOpen; }
 
     // --- Open/close ---
-    public void toggleIsOpen() { if (isOpen) setClosed(); else setOpen(); }
-
+    public void toggleIsOpen() {
+        if (isOpen) setClosed();
+        else setOpen();
+    }
     public void setOpen() {
         logger.debug("Opening terminal");
         isOpen = true;
     }
-
     public void setClosed() {
         logger.debug("Closing terminal");
         isOpen = false;
@@ -74,43 +79,54 @@ public class Terminal extends Component {
 
     // --- Commands registry ---
     public void addCommand(String name, Command command) {
+        Objects.requireNonNull(name, "command name");
+        Objects.requireNonNull(command, "command");
         logger.debug("Adding command: {}", name);
+
         if (commands.containsKey(name)) {
             logger.error("Command {} is already registered", name);
         }
         commands.put(name, command);
-        // update index incrementally
+
+        // incremental index update
         trie.insert(name);
         bkTree.insert(name);
+        indexDirty = true; // signal cache invalidation for suggestions
     }
 
-    // Optional: if you bulk-load or mutate names externally
+    /** Full reindex: rebuild tries from the current command set. */
     public void rebuildAutocompleteIndex() {
-        // Rebuild from scratch
-        // (RadixTrie/BKTree here have no explicit clear; relying on GC if you replace instances)
-        // For clarity we just populate into the existing structures on first call,
-        // then mark indexDirty=false.
-        // If you truly need full rebuild, create new instances and replace references.
-        for (String name : commands.keySet()) {
+        // recreate structures for a real "clear + build"
+        trie = new RadixTrie();
+        bkTree = new BKTree();
+
+        // to keep things deterministic, iterate keys in sorted order
+        var names = new ArrayList<>(commands.keySet());
+        Collections.sort(names);
+        for (var name : names) {
             trie.insert(name);
             bkTree.insert(name);
         }
         indexDirty = false;
+        lastPrefix = "";            // invalidate cached prefix
+        lastSuggestions = List.of();// and cached suggestions
     }
 
     // --- Processing ---
     public boolean processMessage() {
         logger.debug("Processing message");
-        String message = enteredMessage.trim();
-        String[] sections = message.split(" ");
-        String command = sections[0];
-        ArrayList<String> args = new ArrayList<>(Arrays.asList(sections).subList(1, sections.length));
+        var message = enteredMessage.strip();
+        if (message.isEmpty()) return false;
 
-        if (commands.containsKey(command)) {
-            setEnteredMessage("");
-            return commands.get(command).action(args);
-        }
-        return false;
+        var parts = message.split("\\s+");
+        var commandName = parts[0];
+        var args = new ArrayList<>(Arrays.asList(Arrays.copyOfRange(parts, 1, parts.length)));
+
+        var cmd = commands.get(commandName);
+        if (cmd == null) return false;
+
+        setEnteredMessage("");
+        return cmd.action(args);
     }
 
     // --- Typing handlers (update debounce + invalidate suggestion cache) ---
@@ -122,15 +138,15 @@ public class Terminal extends Component {
 
     public void handleBackspace() {
         logger.debug("Handling backspace");
-        int messageLength = enteredMessage.length();
-        if (messageLength != 0) {
-            enteredMessage = enteredMessage.substring(0, messageLength - 1);
+        var len = enteredMessage.length();
+        if (len > 0) {
+            enteredMessage = enteredMessage.substring(0, len - 1);
             touchKeystroke();
         }
     }
 
     public void setEnteredMessage(String text) {
-        enteredMessage = text != null ? text : "";
+        enteredMessage = Objects.requireNonNullElse(text, "");
         touchKeystroke();
     }
 
@@ -146,18 +162,18 @@ public class Terminal extends Component {
             return lastSuggestions; // still within debounce window; reuse last
         }
 
-        String prefix = extractFirstToken(enteredMessage).trim();
+        var prefix = extractFirstToken(enteredMessage).trim();
         if (!Objects.equals(prefix, lastPrefix) || indexDirty) {
-            List<String> hits = Collections.emptyList();
+            List<String> hits = List.of();
             if (!prefix.isEmpty()) {
                 hits = trie.suggestTopK(prefix);
                 if (hits.isEmpty()) {
                     // fuzzy fallback: edit distance ≤ 1
-                    hits = bkTree.searchWithin(prefix, 1);
+                    hits = bkTree.searchWithin(prefix, FUZZY_DISTANCE);
                 }
             }
             lastPrefix = prefix;
-            lastSuggestions = hits.size() > 5 ? hits.subList(0, 5) : hits;
+            lastSuggestions = hits.size() > SUGGESTION_LIMIT ? hits.subList(0, SUGGESTION_LIMIT) : hits;
             indexDirty = false;
         }
         return lastSuggestions;
@@ -165,25 +181,23 @@ public class Terminal extends Component {
 
     /** UI can call this to accept the top suggestion into the input. */
     public void acceptTopSuggestion() {
-        List<String> s = getAutocompleteSuggestions();
-        if (!s.isEmpty()) {
-            // replace first token with suggestion
-            String rest = stripFirstToken(enteredMessage);
-            setEnteredMessage(s.getFirst() + rest);
-        }
+        var suggestions = getAutocompleteSuggestions();
+        if (suggestions.isEmpty()) return;
+
+        // replace first token with suggestion
+        var rest = stripFirstToken(enteredMessage);
+        setEnteredMessage(suggestions.getFirst() + rest);
     }
 
     // --- helpers ---
     private void touchKeystroke() {
         lastKeystrokeNs = System.nanoTime();
-        // invalidate cache for prefix
-        lastPrefix = null;
+        lastPrefix = null; // invalidate cached prefix
     }
 
     private static String extractFirstToken(String s) {
         if (s == null) return "";
         int i = 0;
-        // skip leading spaces
         while (i < s.length() && Character.isWhitespace(s.charAt(i))) i++;
         int start = i;
         while (i < s.length() && !Character.isWhitespace(s.charAt(i))) i++;
@@ -195,6 +209,6 @@ public class Terminal extends Component {
         int i = 0;
         while (i < s.length() && Character.isWhitespace(s.charAt(i))) i++;
         while (i < s.length() && !Character.isWhitespace(s.charAt(i))) i++;
-        return s.substring(i); // retains the whitespace before args, OK for your parser
+        return s.substring(i); // retains whitespace before args, OK for your parser
     }
 }
